--- a/recruit-gui/src/app/newsfeed/newsfeed.component.html
+++ b/recruit-gui/src/app/newsfeed/newsfeed.component.html
@@ -6,7 +6,7 @@
 	
 	<div class="newsfeed-notification-panel{{showNotificationForMobile()}}" >
 		<div class="header">
-			Notifications
+			{{'NOTIFICATIONS' | translate }
 			<span class="notification-mobile-close-btn mobile-only-element" (click)="hideNotificationsForMobile()">X</span>
 		</div>
 		<div class="public-chat-notification-panel-notifications">
