--- a/recruit-gui/src/app/newsfeed/public-posts/public-posts.component.html
+++ b/recruit-gui/src/app/newsfeed/public-posts/public-posts.component.html
@@ -35,12 +35,12 @@
 			
 			<div class="post-footer-item-left post-footer-item-left-disabled" *ngIf="getReplyCount(chat) == 0">
 				<span class="chat-footer-total">({{getReplyCount(chat)}})</span>
-				<span>replies</span>
+				<span>{{'REPLIES' | translate}}</span>
 			</div>
 			
 			<div class="post-footer-item-left" (click)="toggleReplies(chat)" *ngIf="getReplyCount(chat) != 0">
 				<span class="chat-footer-total">({{getReplyCount(chat)}})</span>
-				<span>replies</span>
+				<span>{{'REPLIES' | translate}}</span>
 			</div>
 		
 			<div class="post-footer-item-left">
@@ -49,23 +49,23 @@
 				<span class="chat-icon material-icons public-chat-option-footer chat-liked-{{isLikedByUser(chat)}}" (click)="toggleLikeForChat(chat)">thumb_up</span>
 			</div>
 			
-			<span class="post-footer-item-right" (click)="showReplyView(chat)">reply</span>
+			<span class="post-footer-item-right" (click)="showReplyView(chat)">{{'REPLY' | translate}}</span>
 			
 		</div>
 		
 		<div *ngIf="isInEditMode(chat)">
-			<button class="btn btn-secondary arenella-btn edit-chat-button" (click)="showFeedView()">Back</button>
-			<button class="btn btn-secondary arenella-btn edit-chat-button" (click)="saveChatUpdate(chat)">Save</button>
+			<button class="btn btn-secondary arenella-btn edit-chat-button" (click)="showFeedView()">{{'BACK' | translate}}</button>
+			<button class="btn btn-secondary arenella-btn edit-chat-button" (click)="saveChatUpdate(chat)">{{'SAVE' | translate}}</button>
 		</div>	
 		<div *ngIf="isInReplyMode(chat)">
-			<button class="btn btn-secondary arenella-btn edit-chat-button" (click)="showFeedView()">Back</button>
-			<button class="btn btn-secondary arenella-btn edit-chat-button" (click)="saveChatReply(chat)">Save</button>
+			<button class="btn btn-secondary arenella-btn edit-chat-button" (click)="showFeedView()">{{'BACK' | translate}}</button>
+			<button class="btn btn-secondary arenella-btn edit-chat-button" (click)="saveChatReply(chat)">{{'SAVE' | translate}}</button>
 		</div>	
 	</div>
 
 	<div *ngIf="chat.showReplies">
 		<div style="border-top:1px solid grey;margin-top:5px;width:100%;height:30px;" (click)="toggleReplies(chat)">
-			<span style="float:right;font-weight:bold;cursor:pointer;margin-top:10px;margin-right:10px;">Close</span>
+			<span style="float:right;font-weight:bold;cursor:pointer;margin-top:10px;margin-right:10px;">{{'CLOSE' | translate}}</span>
 		</div>
 		<div>
 			<app-public-posts [topLevel]="'False'" [currentTopLevelChatId]="chat.id" [notificationPath]="notificationPath" [parentCss]="replyCssClass"></app-public-posts>
