listing skill format and location format

--- a/recruit-gui/src/app/listing/listing.component.html
+++ b/recruit-gui/src/app/listing/listing.component.html
@@ -77,7 +77,7 @@
 											<tr>
 												<td style="width:500px;">
 													<span class="non-mobile-only-element listing-country-title"  style="float:left">{{listing.country | translate}}</span>
-													<span class="non-mobile-only-element"  style="float:left;margin-left:10px;">{{listing.location}}</span>
+													<span class="non-mobile-only-element"  style="float:left;margin-left:10px;">{{getFormattedJobTitle(listing.location)}}</span>
 												</td> 
 											</tr>
 											
