pricing and address change

--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -55,6 +55,9 @@
            <a  class="dropdown-item dropdown-item-preauth" routerLink="/faq">{{'arenella-app-menu-faq' | translate}}</a>
         </li>
         <li  class="li-arenella-nav-pre-login li-arenella-nav-pre-login-std" *ngIf="!isAuthenticated()">
+           <a  class="dropdown-item dropdown-item-preauth" routerLink="/pricing">{{'arenella-app-menu-pricing' | translate}}</a>
+        </li>
+        <li  class="li-arenella-nav-pre-login li-arenella-nav-pre-login-std" *ngIf="!isAuthenticated()">
         	<a  class="dropdown-item dropdown-item-preauth" routerLink="/contact">{{'arenella-app-menu-contact' | translate}}</a>
         </li>
         
