--- a/recruit-gui/src/app/contact/contact.component.html
+++ b/recruit-gui/src/app/contact/contact.component.html
@@ -30,17 +30,17 @@
 		<div class="mobile-only-element contact-table">
 			<div>
 				<h5>{{ "arenella-contact-company-name" | translate }}</h5>
-				<p>Arrenella BV</p>
+				<p>Kevin Parkings</p>
 			</div>
 			
 			<div>
 				<h5>{{ "arenella-contact-company-address" | translate }}</h5>
-				<p>Julianastraat 16 <br>Noordwijk 2202KD, <br>Nederland</p>
+				<p>Via Cannata 26 - 87020 - Santa Maria del Cedro (CS) - Italy</p>
 			</div>
 			
 			<div>
 				<h5>{{ "arenella-contact-company-registration-number" | translate }}</h5>
-				<p>61982156</p>
+				<p>03982200788</p>
 			</div>
 			
 			<div>
