--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -13,6 +13,9 @@
 		<a class="mobile-menu-bar-icon unread-chats-{{hasUnreadMessages()}} unread-notifications-{{getUnreadNewsFeedNotifications() > 0 }}" style="text-decoration:none; margin-top:2px; padding-right:0px; cursor:pointer; float:right;"  (click)="openNewsFeedNotifications()" *ngIf="isAuthenticated()">
            notifications
         </a> 
+		<a class="mobile-menu-bar-icon unread-chats-{{unreadNewFeedItems}} unread-notifications-{{unreadNewFeedItems}}" style="text-decoration:none; margin-top:2px; padding-right:0px; cursor:pointer; float:right;"  (click)="openNewsFeed()" *ngIf="isAuthenticated()">
+           bubble_chart
+        </a>
 		<a class="mobile-menu-bar-icon unread-chats-{{hasUnreadMessages()}}" style="text-decoration:none; margin-top:2px; padding-right:0px; cursor:pointer; float:right;"  (click)="openChat()" *ngIf="isAuthenticated()">
            chat
         </a> 
@@ -107,9 +110,19 @@
         <li  class="li-arenella-nav {{menuItemMobileCss}}" *ngIf="isAuthenticated() && isRecruiter() && !isRecruiterNoSubscription() && !hasUnpaidSubscription()" (click)="refreschUnreadAlerts()">
            <a  class="dropdown-item" routerLink="/recruiter-stats">{{'arenella-app-menu-stats' | translate}}</a>
         </li>
+        
         <li  class="li-arenella-nav {{menuItemMobileCss}}" *ngIf="isAuthenticated() && !isRecruiterNoSubscription() && !hasUnpaidSubscription()" (click)="openNewsFeed()">
-        	<a *ngIf="unseenNewsfeedItems" 	class="dropdown-item"><span  class=" unseen-posts ">{{getUnreadNewsFeedNotifications()}}</span>{{'arenella-app-menu-news-feed' | translate}}</a>
-			<a *ngIf="!unseenNewsfeedItems"	class="dropdown-item">{{'arenella-app-menu-news-feed' | translate}}</a>
+        	<span class="material-icons" style="float:left;margin:0px;padding:0px;">
+        		<a title="news feed notifications" class="mobile-menu-bar-icon unread-chats-{{hasUnreadMessages()}} unread-notifications-{{getUnreadNewsFeedNotifications() > 0 }}" style="text-decoration:none; margin-top:2px; padding-right:0px; cursor:pointer; float:right;"  (click)="openNewsFeedNotifications()" *ngIf="isAuthenticated()">
+        		   notifications
+        		</a> 
+				<a title="news feed" class="mobile-menu-bar-icon unread-chats-{{unreadNewFeedItems}} unread-notifications-{{unreadNewFeedItems}}" style="text-decoration:none; margin-top:2px; padding-right:0px; cursor:pointer; float:right;"  (click)="openNewsFeed()" *ngIf="isAuthenticated()">
+        		   bubble_chart
+       			 </a>
+       		</span>
+       		<span style="float:left;margin:0px;padding:0px;min-width:0px;">
+       			<a	class="dropdown-item" style="min-width:0px;" >{{'arenella-app-menu-news-feed' | translate}}</a>
+       		</span>
         </li>
         <li class="li-arenella-nav {{menuItemMobileCss}}" *ngIf="isAuthenticatedAsAdmin() && !isCandidate()" (click)="refreschUnreadAlerts()">
            <a  class="dropdown-item" routerLink="/accounts">{{'arenella-app-menu-accounts' | translate}}</a>
